<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="@id/getPost"
            app:layout_constraintEnd_toStartOf="@id/getPost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/getPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            app:layout_constraintBottom_toBottomOf="@id/updateBtn"
            app:layout_constraintEnd_toStartOf="@id/getComment"
            app:layout_constraintStart_toEndOf="@id/updateBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/getComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            app:layout_constraintBottom_toBottomOf="@id/getPost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/getPost"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createpost"
            app:layout_constraintBottom_toBottomOf="@id/delete"
            app:layout_constraintEnd_toStartOf="@id/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/updateBtn" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deletepost"
            app:layout_constraintBottom_toBottomOf="@id/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/create"
            app:layout_constraintTop_toBottomOf="@id/getComment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
